changes the primary color in js2 branch

--- a/src/scss/utils/_variables.scss
+++ b/src/scss/utils/_variables.scss
@@ -1,8 +1,8 @@
 @import "./icons";
 
 // Colors
-$primary: #13c993;
-$yellow-100: #fefefe;
+$primary: #e43852;
+$yellow-100: #b6e1e4;
 
 // Marking
 $mark-padding: 0.1875em 0.2em;
